@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-19T16:12:06Z",
-  "count_outdated" : 45,
-  "uniques_outdated" : 34,
+  "timestamp" : "2023-07-24T08:13:05Z",
+  "count_outdated" : 46,
+  "uniques_outdated" : 35,
   "count" : 53,
   "uniques" : 40,
   "clones" : [
-    {
-      "timestamp": "2023-07-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-11T00:00:00Z",
       "count": 5,
